Aggiunta Grafica a modo, comunque il problema di text-overflow rimane, fixati alcuni bug

--- a/src/app/components/list-card/list-card.component.scss
+++ b/src/app/components/list-card/list-card.component.scss
@@ -1,6 +1,7 @@
 .componente-rettangolo {
-    background-color: #ccc;
+
     margin: 20px;
+    border-radius: 15px 15px 15px 15px;
 }
 
 h2 {
@@ -10,9 +11,23 @@ h2 {
     padding-left: 20px;
 }
 
+mat-card-title {
+
+    background-color: #139b5c;
+    border: 1px solid darkgreen;
+    border-radius: 15px 15px 0px 0px;
+
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .sottorettangolo {
 
-    background-color: #ddd;
+    border: 1px solid darkgreen;
+    border-radius: 0px 0px 15px 15px;
+    background-color: white;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
@@ -43,23 +58,21 @@ h2 {
 .cardTitle {
     background-color: #ffffff00;
     border-color: #ffffff00;
-    //border-width: 0px;
-    margin-left: 3%;
-    margin-right: 1.5%;
-    margin-bottom: 1%;
-    margin-top: 1%;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    margin-left: 2%;
+    margin-right: 2%;
     width: 70%;
     height: auto;
-    font-size: larger;
+    font-size: x-large;
     font-weight: bold;
 }
 
 #sbutton {
-    width: 9%;
-    height: auto;
-    aspect-ratio: 1;
-    margin-left: 1.5%;
-    margin-right: 1.5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
 
 //BASTA CSS FALLO TE (Non l'ha fatto lui, ma io)
