--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -2,12 +2,13 @@
 .Header {
     width: 100%;
     height: 64.5px;
-    background: #bbbbbb;
+    background: #99DFC6;
 
     @media (min-width: 768px) {
 
         height: 84.5px;
     }
+    border: 2px solid green;
 }
 
 #titleImg {
