--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,80 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$CrocsLists-primary: mat.define-palette(mat.$indigo-palette);
-$CrocsLists-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+
+$default-theme: (
+    50 : #e6f7f1,
+    100 : #c2ecdd,
+    200 : #99dfc6,
+    300 : #70d2af,
+    400 : #51c99d,
+    500 : #32bf8c,
+    600 : #2db984,
+    700 : #26b179,
+    800 : #1fa96f,
+    900 : #139b5c,
+    A100 : #ceffe6,
+    A200 : #9bffcd,
+    A400 : #68ffb3,
+    A700 : #4effa7,
+
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+/*
+$bv-orange: (
+    50: #ffffff,
+    100: #fff7f4,
+    200: #fecdbd,
+    300: #fc9977,
+    400: #fc8259,
+    500: #fb6c3b,
+    600: #fa551d,
+    700: #f44205,
+    800: #d63a04,
+    900: #b83204,
+    A100: #ffffff,
+    A200: #fff7f4,
+    A400: #fc8259,
+    A700: #f44205,
+    contrast: (
+        50: #000,
+        100: #000,
+        200: #000,
+        300: #000,
+        400: #000,
+        500: white,
+        600: white,
+        700: white,
+        800: white,
+        900: white,
+        A100: #000,
+        A200: #000,
+        A400: #000,
+        A700: white,
+    )
+);*/
+
+$CrocsLists-primary: mat.define-palette($default-theme);
+$CrocsLists-accent: mat.define-palette($default-theme, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$CrocsLists-warn: mat.define-palette(mat.$red-palette);
+//$CrocsLists-warn: mat.define-palette($default-theme);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
@@ -23,7 +92,7 @@ $CrocsLists-theme: mat.define-light-theme((
   color: (
     primary: $CrocsLists-primary,
     accent: $CrocsLists-accent,
-    warn: $CrocsLists-warn,
+    //warn: $CrocsLists-warn,
   )
 ));
 
